--- a/404.html
+++ b/404.html
@@ -1,16 +1,17 @@
 <!Doctype HTML>
 <html>
-    <title>Polingsays | 查無資料</title>
+    <link rel=icon href=./src/polingsays-logo.png type="image/png">
+    <title>Polingsays | 重新導向</title>
     <head>
         <meta charset="UTF-8">
-        <link rel=icon href=./src/polingsays-logo.png type="image/png">
-        <meta http-equiv="refresh" content="3; url=https://social.polingsays.com" />
+        <meta http-equiv="refresh" content="2; url=https://social.polingsays.com/" />
     </head>
     <body>
         <h1>
-            您輸入的文章 ID 編號錯誤，請重新輸入！
+            您輸入的文章 ID 編號錯誤！
         </h1>
         <h1>
-            請稍候，系統會將您自動導向回到首頁 . . .
+            請稍後，系統會將您導向到首頁 . . .
         </h1>
     </body>
+</html>
