--- a/social-media/instagram.html
+++ b/social-media/instagram.html
@@ -3,7 +3,7 @@
     <link rel=icon href=./src/polingsays-logo.png type="image/png">
     <title>Polingsays | 重新導向</title>
     <head>
-        <meta http-equiv="refresh" content="0; url=https://polingsays.com/" />
+        <meta http-equiv="refresh" content="0; url=https://instagram.com/poling._.0921?utm_source=url" />
     </head>
     <body>
         <h1>資料載入中，請稍後 . . .</h1>
