--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 	<div class="container">
 		<h1>請輸入文章 ID 編號</h1>
 		<div class="userInput">
-			<input type="tel" id='ist' maxlength="1" onkeyup="clickEvent(this,'sec')">
-			<input type="tel" id="sec" maxlength="1" onkeyup="clickEvent(this,'third')">
-			<input type="tel" id="third" maxlength="1" onkeyup="clickEvent(this,'fourth')">
-			<input type="tel" id="fourth" maxlength="1" onkeyup="clickEvent(this,'fifth')">
-			<input type="tel" id="fifth" maxlength="1">
+			<style>input:focus, input-searchicon:focus, textarea:focus{outline: none}</style>
+			<input type="tel" id='ist' style="border:2px #08c4cc solid" maxlength="1" onkeyup="clickEvent(this,'sec')">
+			<input type="tel" id="sec" style="border:2px #08c4cc solid" maxlength="1" onkeyup="clickEvent(this,'third')">
+			<input type="tel" id="third" style="border:2px #08c4cc solid" maxlength="1" onkeyup="clickEvent(this,'fourth')">
+			<input type="tel" id="fourth" style="border:2px #08c4cc solid" maxlength="1" onkeyup="clickEvent(this,'fifth')">
+			<input type="tel" id="fifth" style="border:2px #08c4cc solid" maxlength="1">
 		</div>
 		<button style="color:#ffffff" OnClick="buttonClick()">前往文章</button>
 	</div>
